# DeMoD-Note

./: .gitignore  DeMoD-Note.cabal  DeMoD-Note.nix  LICENSE  README.md  config.example.toml  flake.nix  info.md  requirements.txt  result
app/: Main.hs
assets/: Astart-ASCII.txt
desktop/: DeMoD-Note.desktop  DeMoD-Note.sh
overlays/: haskell-opengl.nix
src/DeMoDNote/: Arpeggio.hs  BPM.hs  Backend.hs  Config.hs  DeMoD-ASCII.txt  DeMoD.hs  Detector.hs  Error.hs  Export.hs  Monitor.hs  OSC.hs  Opengl-fluidsynth-integration.txt  Opengl.hs  Preset.hs  Recording.hs  Scale.hs  SoundFont.hs  TUI-old.hs  TUI.hs  Types.hs  Util.hs
test/DeMoDNote/: ArpeggioSpec.hs  AudioValidationSpec.hs  BPMSpec.hs  BackendSpec.hs  ConfigSpec.hs  DetectorSpec.hs  JackSpec.hs  OSCSpec.hs  PresetSpec.hs  ScaleSpec.hs  SoundFontSpec.hs
tools/: osc-midi-bridge.py  run-tests.sh  soundfont-downloader.py
