cabal-version: 3.0
name:               DeMoD-Note
version:            1.0.1
synopsis:           Deterministic Monophonic Note Detector
license:            MIT
author:             ALH477 (Asher LeRoy)
homepage:           https://github.com/ALH477/DeMoD-Note
build-type:         Simple

data-files:
  assets/intro.mp3

flag opengl
  description:      Enable OpenGL visualization support
  default:          False
  manual:           True

library
  exposed-modules:
    DeMoDNote.Types
    DeMoDNote.Config
    DeMoDNote.Detector
    DeMoDNote.Backend
    DeMoDNote.OSC
    DeMoDNote.Error
    DeMoDNote.Monitor
    DeMoDNote.Recording
    DeMoDNote.Scale
    DeMoDNote.Arpeggio
    DeMoDNote.BPM
    DeMoDNote.Preset
    DeMoDNote.SoundFont
    DeMoDNote.TUI
    DeMoDNote.Util
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -O2 -threaded
  build-depends:
    , base                 >=4.18 && <5
    , vector               ^>=0.13
    , vector-fftw          ^>=0.1
    , jack                 ^>=0.7
    , hosc                 >=0.20 && <0.22
    , tomland              ^>=1.3
    , optparse-applicative ^>=0.18
    , scotty               >=0.20 && <0.23
    , aeson                ^>=2.2
    , aeson-pretty         ^>=0.8
    , async                ^>=2.2
    , stm                  ^>=2.5
    , katip                ^>=0.8
    , bytestring
    , text
    , array
    , unix
    , network
    , brick                >= 2.0
    , vty                  >=6.0 && <7.0
    , vty-crossplatform    >=0.4
    , mtl                  ^>=2.3
    , time
    , directory
    , filepath
    , process
    , random
    , containers
    , transformers
    , explicit-exception
    , binary
    , deepseq
  pkgconfig-depends: jack >=1.9, fftw3

  if flag(opengl)
    exposed-modules:
      DeMoDNote.Opengl
    build-depends:
      , GLFW-b               >=3.3 && <3.5
      , gl                   >=0.14
      , dear-imgui           >=2.2
      , nanovg               >=0.8
      , zmidi-core           >=0.8
      , svg-tree             >=0.6

test-suite demod-note-tests
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  other-modules:
    DeMoDNote.ArpeggioSpec
    DeMoDNote.AudioValidationSpec
    DeMoDNote.BackendSpec
    DeMoDNote.BPMSpec
    DeMoDNote.ConfigSpec
    DeMoDNote.DetectorSpec
    DeMoDNote.OSCSpec
    DeMoDNote.PresetSpec
    DeMoDNote.ScaleSpec
    DeMoDNote.SoundFontSpec
  hs-source-dirs:    test
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded
  build-depends:
    , DeMoD-Note
    , base                 >=4.18 && <5
    , hspec                >=2.11 && <2.13
    , QuickCheck          >=2.14 && <2.16
    , quickcheck-instances >=0.3 && <0.4
    , process
    , stm
    , vector
    , hosc

executable demod-note
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:      DeMoD-Note, base, optparse-applicative, katip, async, stm, text

executable demod
  main-is:            DeMoD.hs
  hs-source-dirs:     src/DeMoDNote
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:
    , base
    , brick                >= 2.0
    , vty                  >=6.0 && <7.0
    , vty-crossplatform    >=0.4
    , time
    , process
    , directory
    , filepath
